--- a/common/seminar.bib
+++ b/common/seminar.bib
@@ -3,7 +3,8 @@ title = {Survey Paper on Elastic Search},
 author = {Gupta, Pragya and Nair, Sreeja},
 journal = {International Journal of Science and Research (IJSR)},
 year = {2016},
-month = {January}
+month = {January},
+note = {Last accessed : 18-07-2016}
 },
 @book{book,
 title = {Elasticsearch: The Definitive Guide },
@@ -15,27 +16,33 @@ date = {January 2015}
 title = {Mining Modern Repositories with Elasticsearch},
 author = {Kononenko,Oleksii and Baysal,Olga and Holmes, Reid and Godfrey, Michael},
 journal = {University of Waterloo, Waterloo, ON, Canada},
-year = {2014}
+year = {2014},
+note = {Last accessed : 18-07-2016}
 },
 @misc{site,
 title = {Elasticsearch: Search and Analyze Data in Real Time},
-howpublished = {https://www.elastic.co/products/elasticsearch}
+howpublished = {https://www.elastic.co/products/elasticsearch},
+note = {Last accessed : 18-07-2016}
 },
 @misc{benchmark,
 title = {Benchmark of some PHP Clients for Elasticsearch},
-howpublished = {https://github.com/jolicode/elasticsearch-php-benchmark}
+howpublished = {https://github.com/jolicode/elasticsearch-php-benchmark},
+note = {Last accessed : 17-07-2016}
 },
 @misc{memorybenchmark,
 title={Elasticsearch PHP Clients test drive},
-howpublished={https://jolicode.com/blog/elasticsearch-php-clients-test-drive}
+howpublished={https://jolicode.com/blog/elasticsearch-php-clients-test-drive},
+note = {Last accessed : 17-07-2016}
 },
 @misc{lucenesite,
 title={Apache Lucene Core},
-howpublished={https://lucene.apache.org/core/}
+howpublished={https://lucene.apache.org/core/},
+note = {Last accessed : 18-07-2016}
 },
 @misc{dbranking,
 title={DB-Engines Ranking - popularity ranking of database management systems},
-howpublished={http://www.db-engines.com/en/ranking}
+howpublished={http://www.db-engines.com/en/ranking},
+note = {Last accessed : 17-07-2016}
 },
 
 
